# RegexMatcher

./: .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  LICENSING.md  README.md  RegexMatcher-config.cmake.in  RegexMatcherConfig.cmake.in  RegexMatcherConfig.h.in  regex_trie.cpp
.github/scripts/: annotate_errors.py  annotate_warnings.py  generate_coverage_reports.js
.github/workflows/: ci.yaml  template-janitor.yml
cmake_tools/: code-coverage.cmake
core/: CMakeLists.txt
core/include/matcher/: core.hpp
core/include/matcher/impl/: core.cpp  node.cpp  subtree.cpp
include/: CMakeLists.txt  RegexMatcherConfig.h.in
include/matcher/: core.hpp
include/matcher/impl/: core.cpp  core.ipp  node.cpp  node.ipp  subtree.cpp  subtree.ipp
lib/: CMakeLists.txt  RegexMatcher.hpp  edge_info.hpp  limits.hpp  map.hpp  match_graph.hpp  node.hpp  subtree.hpp  symbol.hpp
lib/include/: node_info.hpp  range.hpp  regex_matcher.hpp
lib/processing/: process.hpp  process_limit.hpp  process_set.hpp
lib/src/: node_info.cpp  range.cpp  regex_matcher.cpp  regex_matcher_impl.cpp
pkg/: RegexMatcher-config.cmake.in
src/: RegexMatcher.cpp  limits.cpp  match_graph.cpp  node.cpp  symbol.cpp
tests/: CMakeLists.txt  benchmarks.cpp  expected_output.txt  main.cpp  playground.cpp  ranges.cpp  test.cpp
tests/src/: demo.cpp  main.cpp  playground.cpp
tests/utils/: test.hpp
